--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
